--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <label>Mode:
-  <select id="modeSelect">
-    <option value="system">System</option>
-    <option value="light">Light</option>
-    <option value="dark">Dark</option>
-  </select>
-</label>
+  <div class="theme-toggle">
+    <label>Mode:
+      <select id="modeSelect">
+        <option value="system">System</option>
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+      </select>
+    </label>
+  </div>
 
   <div class="container">
     <h2>Super Password Generator</h2>
@@ -59,10 +61,10 @@
 
     <label>Theme:
       <select id="themeSelect">
-        <option value="default">🌈 Default</option>
-        <option value="matrix">🟢 Matrix</option>
-        <option value="sunset">🌇 Sunset</option>
-        <option value="hacker">💻 Hacker Green</option>
+        <option value="default">Default</option>
+        <option value="matrix">Matrix</option>
+        <option value="sunset">Sunset</option>
+        <option value="hacker">Hacker Green</option>
       </select>
     </label>
   </div>
