--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
   <div class="theme-toggle">
-    <label>Mode:
-      <select id="modeSelect">
-        <option value="system">System</option>
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-      </select>
-    </label>
+    <label for="modeSelect">Mode:</label>
+    <select id="modeSelect">
+      <option value="dark">Dark</option>
+      <option value="light">Light</option>
+      <option value="system">System</option>
+    </select>
   </div>
 
   <div class="container">
